src/objects/Guarantors__c.object
<CustomObject>
    <description>AMP Guarantors Custom Object</description>
    <fields>
        <fullName>Account_Role__c</fullName>
        <inlineHelpText>The role this person plays in this application</inlineHelpText>
        <label>Application Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Guarantors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Authenticate_Score__c</fullName>
        <label>Authenticate+ Score</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <formula>CASESAFEID(Opportunity__r.Account.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_to_Search__c</fullName>
        <label>Consent to Search</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Assessment</label>
        <referenceTo>Credit_Assessment__c</referenceTo>
        <relationshipLabel>Owners/Directors/Guarantors</relationshipLabel>
        <relationshipName>Owners_Directors_Guarantors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalId_Formula__c</fullName>
        <formula>Opportunity__c &amp; Account__c</formula>
        <label>ExternalId Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Guarantors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Person_Account_Email_ID__c</fullName>
        <formula>Account__r.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Account Email ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_Role__c</fullName>
        <formula>TEXT(Account__r.PersonContact.Business_Position__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Business Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Credit_Rating__c</fullName>
        <label>Personal Credit Rating</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Bank_Signatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Bank Signatory</label>
        <type>Checkbox</type>
    </fields>
    <label>Owner/Director/Guarantor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Role__c</columns>
        <columns>Email__c</columns>
        <columns>Person_Account_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ODG-{000000}</displayFormat>
        <label>Owners/Directors/Guarantors</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Owners/Directors/Guarantors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>